Added floating boxes, margins, padding and a font

--- a/style.css
+++ b/style.css
@@ -1,4 +1,42 @@
 * {
      background-color: lightpink;
      color: Indigo;
+     
+}
+
+body {
+     font-family: 'Pacifico', cursive;
+     ;
+}
+
+.illustration {
+     float:left;
+}
+
+.recipe-box {
+     border: 10px dotted rgb(3, 3, 186);
+     width: fit-content;
+     float: left;
+     margin: 10px 20px;
+     padding-right: 20px; 
+     font-size: 20pt;  
+}
+
+.recipe-box h2 {
+     text-align: center;
+}
+
+.bon-appetit {
+     float: left;
+     clear: both;
+     border: 10px dotted rgb(64, 28, 89);
+     margin: 10px;
+     padding: 10px;
+     font-size: 40pt;
+}
+
+footer {
+     float: left;
+     clear: both;
+     font-size: 30pt;
 }
