--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
+* {
+    font-family: "Caveat", cursive;
+}
+
 h1 {
     text-align: center;
-    font-size: 5rem;
-    color: #A1FF00 ;
+    font-size: 3.5rem;
+    color: #ff00b3 ;
     
 }
 h2 {
@@ -32,4 +36,10 @@ img {
 img:hover {
     filter:brightness(75%);
     transition: .2s;
+}
+
+form { 
+    display: flex;
+    width: 100%;
+    align-items: center;
 }
