--- a/origami.css
+++ b/origami.css
@@ -79,6 +79,12 @@ form {
     }
 }
 
+@media only screen and (max-width: 400px) {
+ a {
+    font-size: 1rem;
+ }
+}
+
 footer {
     margin-top: 20px;
 }
